Add time picker UI component

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,8 @@
     <string name="branch_answer_woman">Femeie</string>
     <string name="branch_question_enter">Ora sosirii în secţie</string>
     <string name="branch_question_leave">Ora plecării din secţie</string>
+    <string name="branch_choose_time_enter">Alege ora sosirii</string>
+    <string name="branch_choose_time_leave">Alege ora plecării</string>
     <string name="invalid_branch_county">Alege județul</string>
     <string name="invalid_branch_number">Alege numărul secției</string>
     <string name="invalid_branch_environment">Alege urban sau rural</string>
