--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Monitorizare Vot</string>
+    <string name="app_version">V%1$S</string>
 
     <!-- General -->
     <string name="button_continue">Continuă</string>
