added ro language file

--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -34,7 +34,7 @@
     <string name="content_icon_building">Building icon</string>
 
     <!-- Login -->
-    <string name="login_phone">Phone number</string>
+    <string name="login_phone">Numărul de telefon</string>
     <string name="login_branch">Cod primit</string>
     <string name="login">Login</string>
 
