code translations and cleanups

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="spinner_choose">Choose</string>
     <string name="hint_time">hh:mm</string>
     <string name="empty" />
-    <string name="empty_credential_message">Introduce your phone number and the code you received.</string>
+    <string name="empty_credential_message">Fill in your phone number and the code you received.</string>
 
     <string name="error_permission">Permission error %1$S</string>
     <string name="error_section_type">Error in interpreting the section</string>
@@ -27,7 +27,7 @@
     <!-- Menu -->
     <string name="menu_forms">Forms</string>
     <string name="menu_change_branch">Change the polling station</string>
-    <string name="menu_guide">Observer's guide</string>
+    <string name="menu_guide">Observer\'s guide</string>
     <string name="menu_call">Call the Hotline</string>
 
     <!-- Images -->
@@ -87,6 +87,4 @@
     <string name="note_saved">Saved message</string>
     <string name="invalid_note">Add a description or choose a file</string>
     <string name="error_permission_external_storage">We need your permission to select a resource</string>
-
-    <string name="dummy_form_json">[{\"codSectiune\":\"A\",\"descriere\":\"Descrierea primei sectiuni\",\"intrebari\":[{\"idIntrebare\":1,\"textIntrebare\":\"Ce tipuri de bere iti plac? (se pot alege optiuni multiple)\",\"idTipIntrebare\":0,\"raspunsuriDisponibile\":[{\"idOptiune\":27,\"textOptiune\":\"Dark Island\",\"seIntroduceText\":false},{\"idOptiune\":28,\"textOptiune\":\"London Pride\",\"seIntroduceText\":false},{\"idOptiune\":29,\"textOptiune\":\"Zaganu\",\"seIntroduceText\":false}]},{\"idIntrebare\":2,\"textIntrebare\":\"Iti place berea? (se alege o singura optiune selectabila)\",\"idTipIntrebare\":1,\"raspunsuriDisponibile\":[{\"idOptiune\":24,\"textOptiune\":\"DA\",\"seIntroduceText\":false},{\"idOptiune\":25,\"textOptiune\":\"NU\",\"seIntroduceText\":false},{\"idOptiune\":26,\"textOptiune\":\"Nu stiu\",\"seIntroduceText\":false}]}]},{\"codSectiune\":\"B\",\"descriere\":\"Descrierea celei de-a doua sectiuni\",\"intrebari\":[{\"idIntrebare\":3,\"textIntrebare\":\"Ce tip de transmisie are masina ta? (se poate alege O singura optiune selectabila + text pe O singura optiune)\",\"idTipIntrebare\":2,\"raspunsuriDisponibile\":[{\"idOptiune\":31,\"textOptiune\":\"Transmisia manual\u00E3\",\"seIntroduceText\":false},{\"idOptiune\":32,\"textOptiune\":\"Transmisia automat\u00E3\",\"seIntroduceText\":false},{\"idOptiune\":33,\"textOptiune\":\"Transmisia non-sincron\",\"seIntroduceText\":false},{\"idOptiune\":34,\"textOptiune\":\"Altele (specifica\u0163i)\",\"seIntroduceText\":true}]},{\"idIntrebare\":4,\"textIntrebare\":\"Ce mijloace de transport folosesti sa ajungi la birou? (se pot alege mai multe optiuni)\",\"idTipIntrebare\":3,\"raspunsuriDisponibile\":[{\"idOptiune\":27,\"textOptiune\":\"Metrou\",\"seIntroduceText\":false},{\"idOptiune\":28,\"textOptiune\":\"Tramvai\",\"seIntroduceText\":false},{\"idOptiune\":29,\"textOptiune\":\"Autobuz\",\"seIntroduceText\":false},{\"idOptiune\":30,\"textOptiune\":\"Altele (specifica\u0163i)\",\"seIntroduceText\":true}]},{\"idIntrebare\":5,\"textIntrebare\":\"Ce tip de transmisie are masina ta? (se poate alege O singura optiune selectabila + text pe O singura optiune)\",\"idTipIntrebare\":2,\"raspunsuriDisponibile\":[{\"idOptiune\":35,\"textOptiune\":\"Transmisia manual\u00E3\",\"seIntroduceText\":false},{\"idOptiune\":36,\"textOptiune\":\"Transmisia automat\u00E3\",\"seIntroduceText\":false},{\"idOptiune\":37,\"textOptiune\":\"Transmisia non-sincron\",\"seIntroduceText\":false},{\"idOptiune\":38,\"textOptiune\":\"Altele (specifica\u0163i)\",\"seIntroduceText\":true}]},{\"idIntrebare\":6,\"textIntrebare\":\"Ce mijloace de transport folosesti sa ajungi la birou? (se pot alege mai multe optiuni)\",\"idTipIntrebare\":3,\"raspunsuriDisponibile\":[{\"idOptiune\":39,\"textOptiune\":\"Metrou\",\"seIntroduceText\":false},{\"idOptiune\":40,\"textOptiune\":\"Tramvai\",\"seIntroduceText\":false},{\"idOptiune\":41,\"textOptiune\":\"Autobuz\",\"seIntroduceText\":false},{\"idOptiune\":42,\"textOptiune\":\"Altele (specifica\u0163i)\",\"seIntroduceText\":true}]}]}]</string>
 </resources>
