--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -64,12 +64,12 @@
     <string name="invalid_branch_time_in">Alege ora sosirii</string>
 
     <!-- Forms list -->
-    <string name="form_1">Formular A</string>
-    <string name="form_1_letter">A</string>
-    <string name="form_2">Formular B</string>
-    <string name="form_2_letter">B</string>
-    <string name="form_3">Formular C</string>
-    <string name="form_3_letter">C</string>
+    <string name="form_1">Sâmbătă</string>
+    <string name="form_1_letter">S</string>
+    <string name="form_2">Duminică</string>
+    <string name="form_2_letter">D</string>
+    <string name="form_3">Numărare</string>
+    <string name="form_3_letter">N</string>
     <string name="form_notes">Adaugă notă</string>
     <string name="error_no_form_data">Nu există date pentru acest formular</string>
 
