--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,11 +64,11 @@
     <string name="invalid_branch_time_in">Select the time of arrival</string>
 
     <!-- Forms list -->
-    <string name="form_1">Form A</string>
-    <string name="form_1_letter">A</string>
-    <string name="form_2">Form B</string>
-    <string name="form_2_letter">B</string>
-    <string name="form_3">Form C</string>
+    <string name="form_1">Saturday Form</string>
+    <string name="form_1_letter">SA</string>
+    <string name="form_2">Sunday Form</string>
+    <string name="form_2_letter">SU</string>
+    <string name="form_3">Counting Form</string>
     <string name="form_3_letter">C</string>
     <string name="form_notes">Add a message</string>
     <string name="error_no_form_data">There is no data for this form.</string>
