*Fixed message sent after each message is completed *Insert previous button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,7 +79,9 @@
     <string name="question_incomplete">Incomplete</string>
     <string name="question_notes">Messages</string>
     <string name="question_next">Next</string>
+    <string name="question_previous">Previous</string>
     <string name="question_finish">Send</string>
+    <string name="question_confirmation_message">Message send</string>
 
     <!-- Notes -->
     <string name="note_title">Add a message</string>
