--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -82,7 +82,7 @@
     <string name="question_next">Înainte</string>
     <string name="question_previous">Înapoi</string>
     <string name="question_finish">Trimite</string>
-    <string name="question_confirmation_message">Mesaj trimis</string>
+    <string name="question_confirmation_message">Raspuns trimis</string>
 
     <!-- Notes -->
     <string name="note_title">Adaugă notă</string>
