--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,10 @@
     <string name="spinner_choose">Choose</string>
     <string name="hint_time">hh:mm</string>
     <string name="empty" />
-    <string name="empty_credential_message">Fill in your phone number and the code you received.</string>
+    <string name="error_empty_credentials">Fill in your phone number and the code you received.</string>
+    <string name="error_no_connection">No internet connection. Please connect and try again</string>
+    <string name="error_server">A server error has occurred</string>
+    <string name="error_unknown">An unknown error has occurred</string>
 
     <string name="error_permission">Permission error %1$S</string>
     <string name="error_section_type">Error in interpreting the section</string>
