--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,8 @@
     <string name="error_permission">Permission error %1$S</string>
     <string name="error_section_type">Error in interpreting the section</string>
 
+    <string name="error_empty_code">Fill in the verification code.</string>
+
     <!-- Fragment titles -->
     <string name="title_branch_details">Polling station details</string>
     <string name="title_branch_selection">Choose your polling station</string>
