--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -75,6 +75,8 @@
     <string name="form_3_letter">N</string>
     <string name="form_notes">Adaugă notă</string>
     <string name="error_no_form_data">Nu există date pentru acest formular</string>
+    <string name="forms_sync_failed_description">Descărcarea formularelor a eșuat</string>
+    <string name="forms_sync_failed_retry">Reîncearcă</string>
 
     <!-- Question details -->
     <string name="question_complete">Completat</string>
