--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,11 +65,10 @@
     <string name="invalid_branch_number">Fill in the polling station number</string>
     <string name="invalid_branch_number_minus">The number of the station must be positive</string>
     <string name="invalid_branch_number_max">The maximum number for %1$s county is %2$s</string>
-    <string name="invalid_branch_environment">Choose urban of rural</string>
+    <string name="invalid_branch_environment">Choose urban or rural</string>
     <string name="invalid_branch_sex">Choose man or woman</string>
     <string name="invalid_branch_time_in">Select the time of arrival</string>
-    <string name="invalid_branch_time_out" translatable="false">Select the time of departure</string>
-    <string name="invalid_time_input" translatable="false">Arrival needs to be before departure</string>
+    <string name="invalid_time_input">Arrival needs to be before departure</string>
 
     <!-- Forms list -->
     <string name="form_1">Saturday Form</string>
@@ -88,15 +87,15 @@
     <string name="question_next">Next</string>
     <string name="question_previous">Previous</string>
     <string name="question_finish">Send</string>
-    <string name="question_confirmation_message">Răspuns salvat</string>
-    <string name="questions_synced" translatable="false">Răspunsuri sincronizate cu serverul</string>
+    <string name="question_confirmation_message">Answer saved</string>
+    <string name="questions_synced">Answers synced with the server</string>
 
     <!-- Notes -->
     <string name="note_title">Add a message</string>
     <string name="note_description">Your message</string>
     <string name="note_description_hint">Type here</string>
     <string name="note_photo">Add photo/video</string>
-    <string name="note_saved">Notă salvată</string>
+    <string name="note_saved">Note saved</string>
     <string name="invalid_note">Add a description or choose a file</string>
     <string name="error_permission_external_storage">We need your permission to select a resource</string>
     <string name="note_gallery">Load from gallery</string>
